--- a/gvhgreen.css
+++ b/gvhgreen.css
@@ -18,6 +18,8 @@ body {
 	background-image: radial-gradient(ellipse farthest-corner at center top, #FFFFFF 0%, #4CD2BB 100%);
 
 	font-family:'Dosis', sans-serif;
+
+	margin-top: 10%;
 }
 
 a {
@@ -46,6 +48,7 @@ a:hover {
 	top: 0px;
 	right: 0px;
 	padding: 1.5% 0 1.5% 100px;
+	z-index: 82;
 }
 
 #mainimage {
@@ -78,29 +81,90 @@ p {
 	border-radius: 150px;
 }
 
+#brendan {
+	float: left;
+}
+
 /*ways-to-giv styles*/
+
+.ways-to-give p , h3 , h4 {
+	padding-left: 5px;
+	padding-right: 5px;
+}
+#header-img {
+	float: left;
+	width: 100%;
+	clear: both;
+}
 
 #hair {
 	width: 30%;
-	background-color: blue;
+	height: 650px;
+	background-color: lightblue;
 	float: left; 
+	border-radius: 20px;
+	margin: 5px;
+	margin-left: 50px;
 }
 
 #hair img {
-	width: 90%;
+	width: 95%;
 	position: relative;
+	border-radius: 20px;
+	margin: 5px;
 }
 
 #care {
 	width: 30%;
 	float: left;
-	background-color: red;
+	height: 650px;
+	background-color: lightblue;
+	border-radius: 20px;
+	margin: 5px
+}
+
+#care img {	
+	width: 95%;
+	height: 45%;
+	position: relative;
+	border-radius: 20px;
+	margin: 5px
+}
+
+.facebook {
+	color: white;
+	background-color: #3c5a8d;
+	width: 100px;
+	height: 100px;
+	border-radius: 10px;
+	margin-left: 50px;
+}
+
+#facebook-link {
+	font-size: 600%;
+	padding: 5px;
+	color: white;
 }
 
 #support {
 	width: 30%;
 	float: left;
-	background-color: green;
+	height: 650px;
+	background-color: lightblue;
+	border-radius: 20px;
+	margin: 5px
+}
+
+#support img {
+	width: 95%;
+	height: 45%;
+	position: relative;
+	border-radius: 20px;
+	margin: 5px
+}
+
+#email {
+	color: red;
 }
 footer {
 	clear: both;
