--- a/gvhgreen.css
+++ b/gvhgreen.css
@@ -91,11 +91,11 @@ p {
 	padding-left: 5px;
 	padding-right: 5px;
 }
-#header-img {
+/*#header-img {
 	float: left;
 	width: 100%;
 	clear: both;
-}
+}*/
 
 #hair {
 	width: 30%;
