--- a/GvHMS.css
+++ b/GvHMS.css
@@ -53,6 +53,7 @@ h1 {
 	color: #e7cc58;
 	width: 300px;
 	border-radius: 20px;
+	border: 4px solid #dbb2b2;
 
 }
 .about {
@@ -65,6 +66,7 @@ h1 {
 	background-color: #dbb2b2;
 	font-weight: bold;
 	border-radius: 15px;
+	padding: 5px;
 }
 .mission {
 	margin: 0 auto;
@@ -86,4 +88,8 @@ h1 {
 	width: 650px;
 	margin: 0 auto;
 	text-align: center;
+}
+img {
+	/*border: 3px solid white;*/
+	border-radius: 20px;
 }
