--- a/gvhgreen.css
+++ b/gvhgreen.css
@@ -91,11 +91,6 @@ p {
 	padding-left: 5px;
 	padding-right: 5px;
 }
-/*#header-img {
-	float: left;
-	width: 100%;
-	clear: both;
-}*/
 
 #hair {
 	width: 30%;
@@ -105,6 +100,7 @@ p {
 	border-radius: 20px;
 	margin: 5px;
 	margin-left: 50px;
+	padding: 5px;
 }
 
 #hair img {
@@ -120,7 +116,8 @@ p {
 	height: 650px;
 	background-color: lightblue;
 	border-radius: 20px;
-	margin: 5px
+	margin: 5px;
+	padding: 5px;
 }
 
 #care img {	
@@ -152,7 +149,8 @@ p {
 	height: 650px;
 	background-color: lightblue;
 	border-radius: 20px;
-	margin: 5px
+	margin: 5px;
+	padding: 5px;
 }
 
 #support img {
